# Knou-computer-graphics

./: .gitmodules  CMakeLists.txt  docs.md  readme.md
1_cpp_opengl/01_triangle/: CMakeLists.txt  main.cpp
1_cpp_opengl/02_lines/: CMakeLists.txt  main.cpp
2_c_opengl/01_triangle/: CMakeLists.txt  main.c
